// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/countries/ListaCountries.vue caso 1 snapshot 1`] = `
"<div class=\\"row countries__wrapper\\">
  <div class=\\"countries col-md-6 col-lg-4 col-12\\"><a tabindex=\\"0\\" class=\\"countries__country v-card v-card--link v-sheet theme--light\\">
      <div class=\\"v-responsive\\">
        <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
        <div class=\\"v-responsive__content\\">
          <div class=\\"v-image v-responsive theme--light\\">
            <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
            <transition-stub name=\\"fade-transition\\" mode=\\"in-out\\">
              <div class=\\"v-image__image v-image__image--preload v-image__image--cover\\" style=\\"background-position: center center;\\"></div>
            </transition-stub>
            <div class=\\"v-responsive__content\\"></div>
          </div>
        </div>
      </div>
      <transition-stub name=\\"expand-transition\\">
        <!---->
      </transition-stub>
    </a></div>
  <div class=\\"countries col-md-6 col-lg-4 col-12\\"><a tabindex=\\"0\\" class=\\"countries__country v-card v-card--link v-sheet theme--light\\">
      <div class=\\"v-responsive\\">
        <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
        <div class=\\"v-responsive__content\\">
          <div class=\\"v-image v-responsive theme--light\\">
            <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
            <transition-stub name=\\"fade-transition\\" mode=\\"in-out\\">
              <div class=\\"v-image__image v-image__image--preload v-image__image--cover\\" style=\\"background-position: center center;\\"></div>
            </transition-stub>
            <div class=\\"v-responsive__content\\"></div>
          </div>
        </div>
      </div>
      <transition-stub name=\\"expand-transition\\">
        <!---->
      </transition-stub>
    </a></div>
  <div class=\\"countries col-md-6 col-lg-4 col-12\\"><a tabindex=\\"0\\" class=\\"countries__country v-card v-card--link v-sheet theme--light\\">
      <div class=\\"v-responsive\\">
        <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
        <div class=\\"v-responsive__content\\">
          <div class=\\"v-image v-responsive theme--light\\">
            <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
            <transition-stub name=\\"fade-transition\\" mode=\\"in-out\\">
              <div class=\\"v-image__image v-image__image--preload v-image__image--cover\\" style=\\"background-position: center center;\\"></div>
            </transition-stub>
            <div class=\\"v-responsive__content\\"></div>
          </div>
        </div>
      </div>
      <transition-stub name=\\"expand-transition\\">
        <!---->
      </transition-stub>
    </a></div>
  <div class=\\"countries col-md-6 col-lg-4 col-12\\"><a tabindex=\\"0\\" class=\\"countries__country v-card v-card--link v-sheet theme--light\\">
      <div class=\\"v-responsive\\">
        <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
        <div class=\\"v-responsive__content\\">
          <div class=\\"v-image v-responsive theme--light\\">
            <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
            <transition-stub name=\\"fade-transition\\" mode=\\"in-out\\">
              <div class=\\"v-image__image v-image__image--preload v-image__image--cover\\" style=\\"background-position: center center;\\"></div>
            </transition-stub>
            <div class=\\"v-responsive__content\\"></div>
          </div>
        </div>
      </div>
      <transition-stub name=\\"expand-transition\\">
        <!---->
      </transition-stub>
    </a></div>
  <div class=\\"col col-12\\" style=\\"display: none;\\">
    <div class=\\"row justify-center\\">
      <div class=\\"col-sm-8 col-md-6 col-lg-4 col-12\\">
        <nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" class=\\"paginacao\\">
          <ul class=\\"v-pagination theme--light\\">
            <li><button disabled=\\"disabled\\" type=\\"button\\" aria-label=\\"Previous page\\" class=\\"v-pagination__navigation v-pagination__navigation--disabled\\"><i aria-hidden=\\"true\\" class=\\"v-icon notranslate mdi mdi-chevron-left theme--light\\"></i></button></li>
            <li><button type=\\"button\\" aria-current=\\"true\\" aria-label=\\"Current Page, Page 1\\" class=\\"v-pagination__item v-pagination__item--active primary\\">1</button></li>
            <li><button disabled=\\"disabled\\" type=\\"button\\" aria-label=\\"Next page\\" class=\\"v-pagination__navigation v-pagination__navigation--disabled\\"><i aria-hidden=\\"true\\" class=\\"v-icon notranslate mdi mdi-chevron-right theme--light\\"></i></button></li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>"
`;

exports[`/components/countries/ListaCountries.vue caso 2 snapshot 1`] = `
"<div class=\\"row countries__wrapper\\">
  <div class=\\"countries col-md-6 col-lg-4 col-12\\"><a tabindex=\\"0\\" class=\\"countries__country v-card v-card--link v-sheet theme--light\\">
      <div class=\\"v-responsive\\">
        <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
        <div class=\\"v-responsive__content\\">
          <div class=\\"v-image v-responsive theme--light\\">
            <div class=\\"v-responsive__sizer\\" style=\\"padding-bottom: 56.25%;\\"></div>
            <transition-stub name=\\"fade-transition\\" mode=\\"in-out\\">
              <div class=\\"v-image__image v-image__image--preload v-image__image--cover\\" style=\\"background-position: center center;\\"></div>
            </transition-stub>
            <div class=\\"v-responsive__content\\"></div>
          </div>
        </div>
      </div>
      <transition-stub name=\\"expand-transition\\">
        <!---->
      </transition-stub>
    </a></div>
  <div class=\\"col col-12\\">
    <div class=\\"row justify-center\\">
      <div class=\\"col-sm-8 col-md-6 col-lg-4 col-12\\">
        <nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" class=\\"paginacao\\">
          <ul class=\\"v-pagination theme--light\\">
            <li><button disabled=\\"disabled\\" type=\\"button\\" aria-label=\\"Previous page\\" class=\\"v-pagination__navigation v-pagination__navigation--disabled\\"><i aria-hidden=\\"true\\" class=\\"v-icon notranslate mdi mdi-chevron-left theme--light\\"></i></button></li>
            <li><button type=\\"button\\" aria-current=\\"true\\" aria-label=\\"Current Page, Page 1\\" class=\\"v-pagination__item v-pagination__item--active primary\\">1</button></li>
            <li><button type=\\"button\\" aria-label=\\"Goto Page 2\\" class=\\"v-pagination__item\\">2</button></li>
            <li><button type=\\"button\\" aria-label=\\"Goto Page 3\\" class=\\"v-pagination__item\\">3</button></li>
            <li><button type=\\"button\\" aria-label=\\"Goto Page 4\\" class=\\"v-pagination__item\\">4</button></li>
            <li><button type=\\"button\\" aria-label=\\"Next page\\" class=\\"v-pagination__navigation\\"><i aria-hidden=\\"true\\" class=\\"v-icon notranslate mdi mdi-chevron-right theme--light\\"></i></button></li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>"
`;
